[tool.poetry]
name = "webtoon_data"
version = "0.1.0"
description = "Python wrapper for Webtoon data"
authors = ["Kim Eunji"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"